# edie

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: main.rs
