[package]
name = "edie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
derivative = "2.2.0"
notify = "6.1.1"
rust = "0.0.1"
serde = {version = "1.0.190", features = ["derive"]}
serde_json = "1.0.107"
tokio = {version = "1.33.0", features = ["full"]}
